Se sube la navar de la pagina sin css

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,6 @@
 }
 
 #navbarSupportedContent{
-    margin-left: 15%;
-    margin-right: 15%;
+    /*margin-left: 15%;
+    margin-right: 15%;*/
 }
