--- a/css/style.css
+++ b/css/style.css
@@ -51,12 +51,12 @@ body {
     text-align: left;
 }
 
-.container {
-    display:
-    flex;
+.loginform {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border: 5px solid #FFFF00;
+    padding: 10px;
 }
 
-#login-form {
-    
-    margin:auto;
-}
